<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <ImageView
            android:id="@+id/page_0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/emoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#444444"
            android:textSize="35sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login"
        android:gravity="center"
        android:maxHeight="60dp"
        android:paddingTop="20dp"
        android:text="@string/login_str"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/login_des"
        android:textColor="#444"
        android:textSize="14sp" />

    <Button
        android:id="@+id/main_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/register_str"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/person_reply_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/register_des"
        android:textSize="14sp" />

</LinearLayout>
