<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/post_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/titlehint" >

        <requestFocus />
    </EditText>

    <com.yangjun.baby.ui.EditTextImage
        android:id="@+id/post_new_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.68"
        android:background="@drawable/shape_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/post_new_contenthint"
        android:inputType="textMultiLine"
        android:padding="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <Button
            android:id="@+id/post_new_imgeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_register"
            android:text="@string/post_insert_image" />

        <Button
            android:id="@+id/post_new_saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/postnew" />

    </LinearLayout>

</LinearLayout>