<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
         >

        <ImageView
            android:id="@+id/my_reply_headImg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/whatnew_image_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="5.0dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/home_activity_circle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_activity_button_bkg_green"
                android:gravity="center"
                android:text="@string/main_forums"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_tips"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:background="@drawable/main_activity_button_bkg_red"
                android:gravity="center"
                android:text="@string/main_knowtips"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_motion"
              	android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/main_activity_button_bkg_yellow"
                android:gravity="center"
                android:text="@string/main_motion"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/home_activity_shop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/main_activity_button_bkg_yellow"
                android:gravity="center"
                android:text="@string/main_shop"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_store"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:background="@drawable/main_activity_button_bkg_blue"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/main_store"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_expert"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/main_activity_button_bkg_orange"
                android:gravity="center"
                android:text="@string/main_experts"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/home_activity_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/main_activity_button_bkg_orange"
                android:gravity="center"
                android:text="@string/main_share"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_tool"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:background="@drawable/main_activity_button_bkg_green"
                android:gravity="center"
                android:text="@string/main_tool"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_activity_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/main_activity_button_bkg_blue"
                android:gravity="center"
                android:lines="2"
                android:text="@string/main_settings"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>