<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">

	<RelativeLayout
	    android:id="@+id/LinearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"
	    android:layout_marginTop="20dip"
	    android:background="@drawable/shape_bg"
	    android:paddingBottom="10dip" >

	    <EditText
	        android:id="@+id/user_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:background="@android:color/white"
	        android:ems="10"
	        android:hint="@string/login_des"
	        android:padding="10dp"
	        android:text="yj@qq.com"
	        android:textSize="20sp" >
	
	        <requestFocus />
	    </EditText>
		<View android:background="@drawable/shape_line"
		      android:layout_width="fill_parent"
		      android:layout_height="1.0px"
		      android:layout_below="@+id/user_name"
		       />

	    <EditText
	        android:id="@+id/nickname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/user_name"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:background="@android:color/white"
	        android:ems="10"
	        android:hint="@string/pass_hint"
	        android:inputType="textPassword"
	        android:padding="10dp"
	        android:text="yj123456"
	        android:textSize="20sp" />

	</RelativeLayout>

	<Button
	    android:id="@+id/loginBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/LinearLayout"
	    android:layout_centerHorizontal="true"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp"
	    android:background="@drawable/btn_login"
	    android:text="@string/login_str" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="28dp"
            android:text="@string/forget"
            android:textColor="#7CDDE7"
            android:textSize="15sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_register"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/register_str" />

    </RelativeLayout>

</RelativeLayout>