<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/register_mail"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/person_edit_email"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:clickable="false"
                android:hint="@string/register_mail_input"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/register_nickname"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/person_edit_nickname"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/register_nickname_input"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/head"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/person_edit_headImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/img_head_default" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/register_birthday"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/person_edit_birthDay"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/register_birthday_input"
                android:maxLength="20"
                android:focusable="true"
                android:focusableInTouchMode="true"  
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
            
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/person_edit_saveBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/btn_login"
        android:text="@string/save"
        android:textColor="#ff000000"
        android:textSize="18.0sp" />

</LinearLayout>