<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bisque"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/linerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pull_list_selector_background"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3.0dip"
                android:paddingTop="5.0dip" >

                <ImageView
                    android:id="@+id/headImageView"
                    android:layout_width="44.0dip"
                    android:layout_height="44.0dip"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_head_default" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/headImageView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/headImageView"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:text="@string/register_tip" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="5.0dip"
            android:paddingLeft="5.0dip"
            android:paddingTop="5.0dip" >

            <TextView
                android:id="@+id/nicknameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5.0dip"
                android:ellipsize="end"
                android:maxLength="10"
                android:text="@string/register_nickname"
                android:textColor="#ff5b5b5b"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2.0dip"
                android:drawableLeft="@drawable/ic_time"
                android:text="@string/login_fail_title"
                android:textColor="#ffbdbdbd"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/viewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:layout_toLeftOf="@+id/replyText"
                android:drawableLeft="@drawable/img_eye"
                android:text="@string/main_knowtips"
                android:textColor="#ffbdbdbd"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/replyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="10.0dip"
                android:drawableLeft="@drawable/img_comment"
                android:gravity="right"
                android:text="@string/app_name"
                android:textColor="#ff4b4b4b"
                android:textSize="12.0sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="TextView" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/replyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bisque"
        android:cacheColorHint="#00000000"
        android:divider="#19000000"
        android:dividerHeight="4dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="5dp"
        android:smoothScrollbar="true" />

</LinearLayout>
